--- a/Homepage.html
+++ b/Homepage.html
@@ -46,6 +46,7 @@
 <body>
 
 <div class="sidenav">
+    <a href="#">Effettua Richiesta</a>
     <a href="#">About</a>
     <a href="#">Services</a>
     <a href="#">Clients</a>
@@ -58,6 +59,39 @@
     <p>In this example we have added extra content to the first card, to make it taller. Notice how the other cards follow.</p>
     <p><strong>Note:</strong> The cards are displayed vertically on small screens (less than 576px):</p>
 
+    <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+
+    <div class="card-deck">
+        <div class="card bg-primary">
+            <div class="card-body text-center">
+                <p class="card-text">Some text inside the first card</p>
+                <p class="card-text">Some more text to increase the height</p>
+                <p class="card-text">Some more text to increase the height</p>
+                <p class="card-text">Some more text to increase the height</p>
+                <a href="#" class="btn btn-primary">Button</a>
+            </div>
+        </div>
+        <div class="card bg-warning">
+            <div class="card-body text-center">
+                <p class="card-text">Some text inside the second card</p>
+                <a href="#" class="btn btn-primary">Button</a>
+            </div>
+        </div>
+        <div class="card bg-success">
+            <div class="card-body text-center">
+                <p class="card-text">Some text inside the third card</p>
+            </div>
+        </div>
+        <div class="card bg-danger">
+            <div class="card-body text-center">
+                <p class="card-text">Some text inside the fourth card</p>
+            </div>
+        </div>
+    </div>
+
     <div class="card-deck">
         <div class="card bg-primary">
             <div class="card-body text-center">
@@ -109,6 +143,7 @@
             </div>
         </div>
     </div>
+
 </div>
 <!--
 <div class="main">
