--- a/Homepage.html
+++ b/Homepage.html
@@ -46,7 +46,7 @@
 <body>
 
 <div class="sidenav">
-    <a href="./EffettuaRichiesta.html">Effettua Richiesta</a>
+    <a href="#">Effettua Richiesta</a>
     <a href="#">About</a>
     <a href="#">Services</a>
     <a href="#">Clients</a>
