Pagina info smaltimento terminata

--- a/InfoSmaltimento.html
+++ b/InfoSmaltimento.html
@@ -78,22 +78,62 @@
 
 
 
-        <div class="row">
+
 
             <div id="accordion">
 
                 <div class="card">
-                    <h5 class="card-header">Featured</h5>
+                    <h5 class="card-header">Rifiuti smaltibili</h5>
                     <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                        <p class="card-text">
+                            <li>Divani;</li><br>
+                            <li>Elettrodomestrici;</li><br>
+                            <li>Lavatrici;</li><br>
+                            <li>Armadi e mobili;</li><br>
+                            <li>Batterie esaurite;</li><br>
+                            <li>Componenti meccanici.</li><br>
+                        </p>
                     </div>
                 </div>
 
             </div>
 
+        <div id="accordion">
+
+            <div class="card">
+                <h5 class="card-header">Isola ecologica più vicina in base alla tua posizione</h5>
+                <div class="card-body">
+                    <p class="card-text text-center">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.1511334001234!2d14.819551615315348!3d40.64859877933888!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x133bc2a288312241%3A0xe8026e39f8d61311!2sIsola%20Ecologica%20Arechi!5e0!3m2!1sen!2sit!4v1624091390487!5m2!1sen!2sit" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    </p>
+                </div>
+            </div>
+
         </div>
+
+        <div id="accordion">
+
+            <div class="card">
+                <h5 class="card-header">Orari di apertura e chiusura</h5>
+                <div class="card-body">
+                    <p class="card-text">
+                    <li>Lunedì 9:00 - 13:00 / 15:00 - 18:00</li><br>
+                    <li>Martedì 9:00 - 13:00 / 15:00 - 18:00</li><br>
+                    <li>Mercoledì 9:00 - 13:00 / 15:00 - 18:00</li><br>
+                    <li>Giovedì 9:00 - 13:00 / 15:00 - 18:00</li><br>
+                    <li>Venerdì 9:00 - 13:00 / 15:00 - 18:00</li><br>
+                    <li>Sabato chiuso</li><br>
+                    <li>Domenica chiuso</li><br>
+                    </p>
+                </div>
+            </div>
+
+        </div>
+
+
+
+        </div>
+
 </div>
 
 <!-- jQuery CDN - Slim version (=without AJAX) -->
