--- a/InfoSmaltimento.html
+++ b/InfoSmaltimento.html
@@ -41,17 +41,17 @@
             <p>Dummy Heading</p>
 
             <li>
-                <a href="#">Home</a>
+                <a href="./index.html">Home</a>
             </li>
 
             <li>
-                <a href="#">Effettua richiesta</a>
+                <a href="./NuovaRichiesta.html">Effettua richiesta</a>
             </li>
             <li>
-                <a href="#">Info smaltimento</a>
+                <a href="./InfoSmaltimento.html">Info smaltimento</a>
             </li>
             <li>
-                <a href="#">Le mie richieste</a>
+                <a href="./LeMieRichieste.html">Le mie richieste</a>
             </li>
             <li>
                 <a href="#">Logout</a>
