--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
             <p>Dummy Heading</p>
 
             <li>
-                <a href="#">Home</a>
+                <a href="./index.html">Home</a>
             </li>
 
             <li>
-                <a href="#">Effettua richiesta</a>
+                <a href="./NuovaRichiesta.html">Effettua richiesta</a>
             </li>
             <li>
-                <a href="#">Info smaltimento</a>
+                <a href="./InfoSmaltimento.html">Info smaltimento</a>
             </li>
             <li>
                 <a href="./LeMieRichieste.html">Le mie richieste</a>
