--- a/InfoRichiesta.html
+++ b/InfoRichiesta.html
@@ -61,9 +61,11 @@
                 </form>
             </div>
             <div style="alignment: center; align-self: center">
-                <button class="btn btn--radius-2 btn--blue-2" style="align-items: center" type="submit">Chiudi
-                    Richiesta
-                </button>
+                <a href="index.html">
+                    <button class="btn btn--radius-2 btn--blue-2" style="align-items: center" type="submit">Chiudi
+                        Richiesta
+                    </button>
+                </a>
             </div>
         </div>
     </div>
