--- a/InfoSmaltimento.html
+++ b/InfoSmaltimento.html
@@ -70,7 +70,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav justify-content-center">
-                        <li class="nav-item justify-content-center">
+                        <li class="nav-item">
                             <h2>Informazioni di smaltimento</h2>
                         </li>
 
