--- a/InfoRichiesta_sa.html
+++ b/InfoRichiesta_sa.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>Le Mie Richieste</title>
+    <title>Informazioni Richiesta</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
@@ -27,6 +27,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
             integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
             crossorigin="anonymous"></script>
+
 </head>
 <body>
 <div class="wrapper">
@@ -81,34 +82,46 @@
                 </div>
             </div>
         </nav>
-        <h2 style="align-content: center; align-items: center; text-align: center">
-            <span style="text-align: center;align-items: center;align-content:center " class="badge badge-info">Hai una richiesta</span>
-        </h2>
 
-        <div class="row">
 
-            <div class="col-sm-3">
-                <a href="./InfoRichiesta.html">
-                    <div class="card card-block">
-                        <img class="card-img-top" data-src="holder.js/100px180/" alt="100%x180"
-                             src="data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22318%22%20height%3D%22180%22%20viewBox%3D%220%200%20318%20180%22%20preserveAspectRatio%3D%22none%22%3E%3C!--%0ASource%20URL%3A%20holder.js%2F100px180%2F%0ACreated%20with%20Holder.js%202.8.2.%0ALearn%20more%20at%20http%3A%2F%2Fholderjs.com%0A(c)%202012-2015%20Ivan%20Malopinsky%20-%20http%3A%2F%2Fimsky.co%0A--%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%3C!%5BCDATA%5B%23holder_153cdb63a13%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A16pt%20%7D%20%5D%5D%3E%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_153cdb63a13%22%3E%3Crect%20width%3D%22318%22%20height%3D%22180%22%20fill%3D%22%23777%22%2F%3E%3Cg%3E%3Ctext%20x%3D%22118.0859375%22%20y%3D%2297.35%22%3E318x180%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E"
-                             data-holder-rendered="true" style="height: 180px; width: 100%; display: block;">
-                        <div class="card-block">
-                            <h4 class="card-title">Card title</h4>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of
-                                the card's content.</p>
-
-                        </div>
-                    </div>
-                </a>
+        <div class="card card-6">
+            <div class="card-heading">
+                <h3 style="align-content: center; align-items: center; text-align: center">
+                    <span style="text-align: center;align-items: center;align-content:center"
+                          class="badge badge-info">Informazioni sulla tua richiesta</span>
+                </h3>
             </div>
-
+            <table align="center" class="table">
+                <tbody>
+                <tr>
+                    <th scope="row">Data richiesta</th>
+                    <td>20-02-2021</td>
+                </tr>
+                <tr>
+                    <th scope="row">Descrizione</th>
+                    <td>Lavatrice, 40kg, colore bianco</td>
+                </tr>
+                <tr>
+                    <th scope="row">Indirizzo</th>
+                    <td>Via Roma, 13 (NA)</td>
+                </tr>
+                <tr>
+                    <th scope="row">Stato della richiesta</th>
+                    <td>In corso</td>
+                </tr>
+                </tbody>
+            </table>
         </div>
+        <div style="alignment: center; align-self: center">
+            <a href="index.html">
+                <button class="btn btn-secondary" style="align-items: center" type="submit">Chiudi
+                    Richiesta
+                </button>
+            </a>
+        </div>
+
+
     </div>
-
-
 </div>
-
 </body>
 </html>
