Fix bug required

--- a/NuovaRichiesta.html
+++ b/NuovaRichiesta.html
@@ -81,8 +81,6 @@
             </div>
         </nav>
 
-
-
         <div class="text-center mb-4">
             <img class="mb-4" src="Logo.png" alt="American Delights" width="250" height="250">
         </div>
@@ -95,19 +93,19 @@
                     <form>
                         <div class="form-group">
                             <label for="exampleInputName1">Nome</label>
-                            <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" placeholder="Inserisci il nome">
+                            <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" placeholder="Inserisci il nome" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputCogn1">Cognome</label>
-                            <input type="cognome" class="form-control" id="exampleInputCogn1" placeholder="Inserisci il cognome">
+                            <input type="cognome" class="form-control" id="exampleInputCogn1" placeholder="Inserisci il cognome" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputAddress">Indirizzo</label>
-                            <input type="address" class="form-control" id="exampleInputAddress" placeholder="Inserisci il tuo indirizzo">
+                            <input type="address" class="form-control" id="exampleInputAddress" placeholder="Inserisci il tuo indirizzo" required>
                         </div>
                         <div class="form-group">
                             <label for="exampleInputDescr">Descrizione</label>
-                            <input type="decsription" class="form-control" id="exampleInputDescr" placeholder="Inserisci una descrizione">
+                            <input type="decsription" class="form-control" id="exampleInputDescr" placeholder="Inserisci una descrizione" required>
                         </div>
 
                         <div class="custom-file">
