--- a/NuovaRichiesta.html
+++ b/NuovaRichiesta.html
@@ -82,7 +82,7 @@
         </nav>
 
         <div class="text-center mb-4">
-            <img class="mb-4" src="Logo.png" alt="American Delights" width="250" height="250">
+            <img class="mb-4" src="Logo.png" alt="Ecologic island" width="250" height="250">
         </div>
 
         <div id="accordion">
