--- a/InfoRichiesta.html
+++ b/InfoRichiesta.html
@@ -103,7 +103,7 @@
                 </tr>
                 <tr>
                     <th scope="row">Indirizzo</th>
-                    <td>Via Leopari, 55 (SA)</td>
+                    <td>Via Leopari, 55 (NA)</td>
                 </tr>
                 <tr>
                     <th scope="row">Stato della richiesta</th>
