--- a/InfoRichiesta_sa.html
+++ b/InfoRichiesta_sa.html
@@ -103,7 +103,7 @@
                 </tr>
                 <tr>
                     <th scope="row">Indirizzo</th>
-                    <td>Via Roma, 13 (NA)</td>
+                    <td>Via Roma, 13 (SA)</td>
                 </tr>
                 <tr>
                     <th scope="row">Stato della richiesta</th>
