--- a/InfoRichiesta.html
+++ b/InfoRichiesta.html
@@ -65,37 +65,23 @@
     <!-- Page Content  -->
     <div id="content">
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
+        <div class="text-center mb-4">
+            <a href="index.html">
+                <img class="mb-4" src="Logo.png" alt="Ecologic island" width="180" height="180">
+            </a>        </div>
 
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <form class="form-inline">
-                                <input class="form-control mr-sm-2" type="search" placeholder="Search"
-                                       aria-label="Search">
-                                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                            </form>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-
-        <div class="card card-6">
-            <div class="card-heading">
-                <h3 style="align-content: center; align-items: center; text-align: center">
+        <h3 style="align-content: center; align-items: center; text-align: center">
                     <span style="text-align: center;align-items: center;align-content:center"
                           class="badge badge-info">Informazioni sulla tua richiesta</span>
-                </h3>
-            </div>
+        </h3>
+
+        <div class="card card-6">
             <table align="center" class="table">
                 <tbody>
                 <tr>
                     <th scope="row">Data richiesta</th>
-                    <td>10-02-2021</td>
+                    <td>20-02-2021</td>
                 </tr>
                 <tr>
                     <th scope="row">Descrizione</th>
@@ -112,7 +98,7 @@
                 </tbody>
             </table>
         </div>
-        <div style="alignment: center; align-self: center">
+        <div class="text-center mb-4">
             <a href="index.html">
                 <button class="btn btn-secondary" style="align-items: center" type="submit">Chiudi
                     Richiesta
