--- a/InfoSmaltimento.html
+++ b/InfoSmaltimento.html
@@ -68,8 +68,9 @@
     <!-- Page Content  -->
     <div id="content">
         <div class="text-center mb-4">
-            <img class="mb-4" src="Logo.png" alt="Ecologic island" width="180" height="180">
-        </div>
+            <a href="index.html">
+                <img class="mb-4" src="Logo.png" alt="Ecologic island" width="180" height="180">
+            </a>        </div>
 
 
         <h2 style="align-content: center; align-items: center; text-align: center">
