--- a/NuovaRichiesta.html
+++ b/NuovaRichiesta.html
@@ -70,8 +70,9 @@
 
 
         <div class="text-center mb-4">
-            <img class="mb-4" src="Logo.png" alt="Ecologic island" width="180" height="180">
-        </div>
+            <a href="index.html">
+                <img class="mb-4" src="Logo.png" alt="Ecologic island" width="180" height="180">
+            </a>        </div>
         <h2 style="align-content: center; align-items: center; text-align: center">
         <span style="text-align: center;align-items: center;align-content:center; color: white"
               class="badge bg-secondary">Effettua una nuova richiesta di smaltimento</span>
