--- a/index.html
+++ b/index.html
@@ -70,8 +70,9 @@
 
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-
-
+                <a href="index.html">
+                    <img class="mb-4" src="Logo.png" alt="Ecologic island" width="180" height="180">
+                </a>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item active">
