--- a/InfoRichiesta_sa.html
+++ b/InfoRichiesta_sa.html
@@ -73,7 +73,7 @@
 
         <h3 style="align-content: center; align-items: center; text-align: center">
                     <span style="text-align: center;align-items: center;align-content:center"
-                          class="badge badge-info">Informazioni sulla tua richiesta</span>
+                          class="badge badge-info">Informazioni sulla richiesta</span>
         </h3>
 
         <div class="card card-6">
