Fix feedback on request form

--- a/NuovaRichiesta1.html
+++ b/NuovaRichiesta1.html
@@ -72,17 +72,25 @@
         <div class="text-center mb-4">
             <img class="mb-4" src="Logo.png" alt="Ecologic island" width="180" height="180">
         </div>
+
+        <div id="messageSucc">
+            <div class="alert alert-success" role="alert">
+                Richiesta effettuata con successo! <a href="./index.html" class="alert-link">Torna alla
+                home</a>.
+            </div>
+        </div>
+
         <h2 style="align-content: center; align-items: center; text-align: center">
         <span style="text-align: center;align-items: center;align-content:center; color: white"
               class="badge bg-secondary">Effettua una nuova richiesta di smaltimento</span>
         </h2>
 
-               <div id="accordion">
+        <div id="accordion">
 
             <div class="card">
                 <h5 class="card-header">Inserisci i tuoi dati</h5>
                 <div class="card-body">
-                    <form action="NuovaRichiesta1.html">
+                    <form>
                         <div class="form-group">
                             <label for="exampleInputName1">Nome</label>
                             <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp"
@@ -112,6 +120,7 @@
 
                         <button class="btn btn-primary" style="margin-top: 15px">Invia Richiesta</button>
                     </form>
+
 
 
 
