--- a/InfoRichiesta.html
+++ b/InfoRichiesta.html
@@ -100,7 +100,7 @@
         </div>
         <div class="text-center mb-4">
             <a href="index.html">
-                <button class="btn btn-secondary" style="align-items: center" type="submit">Chiudi
+                <button class="btn btn-info" style="align-items: center" type="submit">Chiudi
                     Richiesta
                 </button>
             </a>
