--- a/InfoRichiesta_sa.html
+++ b/InfoRichiesta_sa.html
@@ -68,7 +68,7 @@
         <div class="text-center mb-4">
             <a href="index.html">
                 <img class="mb-4" src="Logo.png" alt="Ecologic island" width="180" height="180">
-            </a>        </div>
+            </a></div>
 
 
         <h3 style="align-content: center; align-items: center; text-align: center">
@@ -102,7 +102,7 @@
 
         <div class="text-center mb-4">
             <a href="index.html">
-                <button class="btn btn-secondary" style="align-items: center" type="submit">Chiudi
+                <button class="btn btn-info" style="align-items: center" type="submit">Chiudi
                     Richiesta
                 </button>
             </a>
