Insert Image && complete the web sites

--- a/InfoRichiesta.html
+++ b/InfoRichiesta.html
@@ -85,7 +85,7 @@
                 </tr>
                 <tr>
                     <th scope="row">Descrizione</th>
-                    <td>Lavatrice, 20kg, colore nero</td>
+                    <td>Divano, 100kg</td>
                 </tr>
                 <tr>
                     <th scope="row">Indirizzo</th>
