--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                     <ul class="nav navbar-nav ml-auto">
                         <li class="nav-item active">
                             <div class="form-inline">
-                                <input class="form-control mr-sm-2" placeholder="Search"
+                                <input class="form-control mr-sm-2" placeholder="Cerca 'Salerno'"
                                        aria-label="Search">
-                                <button class="btn btn-outline-success my-2 my-sm-0" onclick="validate()">Search
+                                <button class="btn btn-outline-success my-2 my-sm-0" onclick="validate()">Ricerca
                                 </button>
                             </div>
                         </li>
